CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(Practice CXX)
SET(CMAKE_CXX_STANDARD 14)

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../include)


SET(OBJNAME run)
FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_EXECUTABLE(${OBJNAME} ${${OBJNAME}_SRC})
