CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(Practice CXX)
SET(CMAKE_CXX_STANDARD_REQUIRED 11)

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../include)

# rpath
SET(CMAKE_INSTALL_RPATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
IF(RPATH)
	SET(CMAKE_INSTALL_RPATH "${RPATH}:${CMAKE_INSTALL_RPATH}")
ENDIF(RPATH)
SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)


SET(OBJNAME run)
FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_EXECUTABLE(${OBJNAME} ${${OBJNAME}_SRC})
